feat: show site if no connection but has gator permissions (#36811)
<!--
Please submit this PR as a draft initially.
Do not mark it as "Ready for review" until the template has been
completely filled out, and PR status checks have passed at least once.
-->

## **Description**

### What is the reason for the change?

Currently, when a site is disconnected from MetaMask but still has Gator
permissions (advanced permissions granted through the Gator permissions
system), the site is not displayed in the permissions/connections UI.
This creates confusion for users who have granted advanced permissions
but cannot see or manage them after disconnecting the basic connection.

### What is the improvement/solution?

This PR updates the permissions page to display sites that have Gator
permissions even when they don't have an active connection. The changes
include:

1. **Enhanced Site Display Logic**: Modified the site counting and
display logic to include sites with only Gator permissions, ensuring
they remain visible in the connections UI even without an active
connection.

2. **Advanced Permissions Visibility**: Added functionality to show
advanced permissions in the UI, allowing users to view and manage Gator
permissions independently of the connection status.

3. **State Management Optimization**: Updated the permission selectors
and state management to properly track and display sites based on their
permission state rather than just connection status.

This ensures users have full visibility and control over all permissions
granted to sites, improving transparency and making permission
management more comprehensive.

[![Open in GitHub
Codespaces](https://github.com/codespaces/badge.svg)](https://codespaces.new/MetaMask/metamask-extension/pull/36811?quickstart=1)

## **Changelog**

<!--
If this PR is not End-User-Facing and should not show up in the
CHANGELOG, you can choose to either:
1. Write `CHANGELOG entry: null`
2. Label with `no-changelog`

If this PR is End-User-F

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -421,6 +421,12 @@
   "advancedGasPriceTitle": {
     "message": "Gas price"
   },
+  "advancedPermissionSmallCase": {
+    "message": "advanced permission"
+  },
+  "advancedPermissionsSmallCase": {
+    "message": "advanced permissions"
+  },
   "advancedPriorityFeeToolTip": {
     "message": "Priority fee (aka “miner tip”) goes directly to miners and incentivizes them to prioritize your transaction."
   },
