fix: cp-13.11.0 Update dapp swap comparison banner UI (#38006)
<!--
Please submit this PR as a draft initially.
Do not mark it as "Ready for review" until the template has been
completely filled out, and PR status checks have passed at least once.
-->

## **Description**

<!--
Write a short description of the changes included in this pull request,
also include relevant motivation and context. Have in mind the following
questions:
1. What is the reason for the change?
2. What is the improvement/solution?
-->

This PR aims to adjust design changes in the dapp swap comparison
banner.

Note: No changelog needed because this feature is not released yet.

[![Open in GitHub
Codespaces](https://github.com/codespaces/badge.svg)](https://codespaces.new/MetaMask/metamask-extension/pull/38006?quickstart=1)

## **Changelog**

<!--
If this PR is not End-User-Facing and should not show up in the
CHANGELOG, you can choose to either:
1. Write `CHANGELOG entry: null`
2. Label with `no-changelog`

If this PR is End-User-Facing, please write a short User-Facing
description in the past tense like:
`CHANGELOG entry: Added a new tab for users to see their NFTs`
`CHANGELOG entry: Fixed a bug that was causing some NFTs to flicker`

(This helps the Release Engineer do their job more quickly and
accurately)
-->

CHANGELOG entry:

## **Related issues**

Fixes: https://github.com/MetaMask/MetaMask-planning/issues/6312

## **Manual testing steps**

N/A

## **Screenshots/Recordings**

<!-- If applicable, add screenshots and/or recordings to visualize the
before and after of your change. -->

### **Before**

<img width="514" height="814" alt="before dark"
src="https://github.com/user-attachments/assets/647201a7-8dce-4072-b945-c1f0fe99f945"
/>

<img width="512" height="732" alt="before light"
src="https://github.com/user-attachments/assets/00d779fb-44cc-473f-8b89-f33293f278c9"
/>


### **After**

<img width="512" height="732" alt="after dark"
src="https://github.com/user-attachments/assets/e89d1cc3

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -3691,7 +3691,7 @@
     "message": "Wallet notifications are currently not active."
   },
   "metamaskSwap": {
-    "message": "Metamask Swap"
+    "message": "MetaMask Swap"
   },
   "metamaskSwapsOfflineDescription": {
     "message": "MetaMask Swaps is undergoing maintenance. Please check back later."
