--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -4145,13 +4145,7 @@
     "message": "Read more"
   },
   "newPrivacyPolicyTitle": {
-    "message": "We've updated our privacy policy"
-  },
-  "pna25BannerActionButton": {
-    "message": "Learn more"
-  },
-  "pna25BannerTitle": {
-    "message": "We're updating MetaMetrics. We'll associate some in-app activity to on-chain data to better understand usage. You can opt out via Settings."
+    "message": "We’ve updated our privacy policy"
   },
   "newRpcUrl": {
     "message": "New RPC URL"
@@ -4540,10 +4534,10 @@
     "message": "Terms of Use"
   },
   "onboardingMetametricCheckboxDescriptionOne": {
-    "message": "We'll collect basic product usage data like general location, clicks, and views. No other information will be stored."
+    "message": "We’ll collect basic product usage data like general location, clicks, and views. No other information will be stored."
   },
   "onboardingMetametricCheckboxDescriptionOneUpdated": {
-    "message": "We'll collect basic product usage data. We may associate this information with on-chain data."
+    "message": "We’ll collect basic product usage data. We may associate this information with on-chain data."
   },
   "onboardingMetametricCheckboxDescriptionTwo": {
     "message": "We’ll use this data to learn how you interact with our marketing communications. We may share relevant news (like product features)."
@@ -5062,6 +5056,9 @@
   "plusXMore": {
     "message": "+ $1 more",
     "description": "$1 is a number of additional but unshown items in a list- this message will be shown in place of those items"
+  },
+  "pna25BannerTitle": {
+    "message": "We’re updating MetaMetrics. We'll associate some in-app activity to on-chain data to better understand usage. You can opt out via Settings."
   },
   "popularNetworkAddToolTip": {
     "message": "Some of these networks rely on third parties. The connections may be less reliable or enable third-parties to track activity.",
