--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -4145,13 +4145,10 @@
     "message": "Read more"
   },
   "newPrivacyPolicyTitle": {
-    "message": "We've updated our privacy policy"
-  },
-  "pna25BannerActionButton": {
-    "message": "Learn more"
+    "message": "We’ve updated our privacy policy"
   },
   "pna25BannerTitle": {
-    "message": "We're updating MetaMetrics. We'll associate some in-app activity to on-chain data to better understand usage. You can opt out via Settings."
+    "message": "We’re updating MetaMetrics. We'll associate some in-app activity to on-chain data to better understand usage. You can opt out via Settings."
   },
   "newRpcUrl": {
     "message": "New RPC URL"
@@ -4540,10 +4537,10 @@
     "message": "Terms of Use"
   },
   "onboardingMetametricCheckboxDescriptionOne": {
-    "message": "We'll collect basic product usage data like general location, clicks, and views. No other information will be stored."
+    "message": "We’ll collect basic product usage data like general location, clicks, and views. No other information will be stored."
   },
   "onboardingMetametricCheckboxDescriptionOneUpdated": {
-    "message": "We'll collect basic product usage data. We may associate this information with on-chain data."
+    "message": "We’ll collect basic product usage data. We may associate this information with on-chain data."
   },
   "onboardingMetametricCheckboxDescriptionTwo": {
     "message": "We’ll use this data to learn how you interact with our marketing communications. We may share relevant news (like product features)."
