fix: update transaction shield claims guide url

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -6049,7 +6049,7 @@
     "message": "Provide a brief summary of the incident"
   },
   "shieldClaimDetails": {
-    "message": "You may file a single claim per incident within $1 days of the incident. View the full list of what’s covered $2.",
+    "message": "You may file a single claim per incident within $1 days of the incident. $2",
     "description": "The $1 is the number of days and $2 is a link to the full coverage policy"
   },
   "shieldClaimDetailsViewClaims": {
@@ -6186,6 +6186,9 @@
   },
   "shieldClaimTransactionNotSuccessful": {
     "message": "Transaction not successful on chain."
+  },
+  "shieldClaimViewGuidelines": {
+    "message": "View guide"
   },
   "shieldClaimWalletOwnershipValidationFailed": {
     "message": "Wallet ownership validation failed."
