feat: handle api errors on UI during subscription (#38090)
<!--
Please submit this PR as a draft initially.
Do not mark it as "Ready for review" until the template has been
completely filled out, and PR status checks have passed at least once.
-->

## **Description**
Shield Plan page: adds UI for handling for api errors

**Back button**
- redirects to **settings page** if shield plan page is opened from
_Shield entry modal_ from settings
- redirects to **home page** if shield plan is opened from _Shield entry
modal_ from home page or post transaction

**Try again**
Reloads metamask extension

<!--
Write a short description of the changes included in this pull request,
also include relevant motivation and context. Have in mind the following
questions:
1. What is the reason for the change?
2. What is the improvement/solution?
-->

[![Open in GitHub
Codespaces](https://github.com/codespaces/badge.svg)](https://codespaces.new/MetaMask/metamask-extension/pull/38090?quickstart=1)

## **Changelog**

<!--
If this PR is not End-User-Facing and should not show up in the
CHANGELOG, you can choose to either:
1. Write `CHANGELOG entry: null`
2. Label with `no-changelog`

If this PR is End-User-Facing, please write a short User-Facing
description in the past tense like:
`CHANGELOG entry: Added a new tab for users to see their NFTs`
`CHANGELOG entry: Fixed a bug that was causing some NFTs to flicker`

(This helps the Release Engineer do their job more quickly and
accurately)
-->

CHANGELOG entry: adds UI for handling for api errors on shield plan page

## **Related issues**

Fixes:

## **Manual testing steps**

1. Login to an account without shield subscription
2. Go to Menu > Settings
3. Click on Transaction Shield (opens shield entry modal) 
4. Click on getting started (redirects to shield plan subscription page)
5. Open `Chrome developer tools` > `Network` tab
6. Change throttling to offline 
7. Submit the form (API error UI should show)

## **Screenshots/Recordings**

<!-- If 

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -6363,6 +6363,9 @@
   "shieldPlanDetails3": {
     "message": "24/7 access to priority live chat support"
   },
+  "shieldPlanErrorText": {
+    "message": "Couldn’t connect to Transaction Shield"
+  },
   "shieldPlanFooterNoteMonthly": {
     "message": "Billed monthly, cancel anytime"
   },
