--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -6380,12 +6380,12 @@
     "description": "The $1 is the price of the monthly plan"
   },
   "shieldPlanNoFunds": {
-    "message": "Insufficient $1 or $2",
-    "description": "$1 or $2 shows the supported token eg. USDC, USDT or mUSD"
+    "message": "Requires $1 $2 or $3",
+    "description": "$1 is the minimum amount, $2 or $3 shows the supported token eg. USDC, USDT or mUSD"
   },
   "shieldPlanNoFundsOneToken": {
-    "message": "Insufficient $1",
-    "description": "$1 is the one token supported"
+    "message": "Requires $1 $2",
+    "description": "$1 is the minimum amount, $2 shows the supported token eg. mUSD"
   },
   "shieldPlanPayWith": {
     "message": "Pay with"
